# Food-Evaluation-using-llm

./: .dockerignore  .env  .gitignore  Dockerfile  Makefile  README.md  app.yaml  datatypes.py  dispatch.yaml  docker-compose.yaml  main.py  model.py  pyproject.toml  render.yaml  requirements.txt  run.bat  run.py
.github/workflows/: release.yml
app/: main.py  model.py
backend/: .env.default  Dockerfile  analytics.py  app.yaml  chromadb_client.py  config.py  datatypes.py  ingest.py  main.py  model.py  prompt.py  requirements.txt  scoring.py
backend/eval/: logger.py  run_eval.py  usda_ground_truth.json
frontend/: Dockerfile  app.yaml  requirements.txt  streamlitapp.py
