[tool.poetry]
name = "Food Evaluation"
version = "0.1.0"
description = ""
authors = ["ibrahimkaleel@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.2.9"
fastapi = "^0.111.1"
langchain-google-genai = "^1.0.7"

[build.system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"